Bug 151052 - Find Bar's "Find All" button text invisible in dark mode, Windows
Summary: Find Bar's "Find All" button text invisible in dark mode, Windows
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: UI (show other bugs)
Version:
(earliest affected)
7.4.1.2 release
Hardware: All Windows (All)
: medium normal
Assignee: Caolán McNamara
URL:
Whiteboard: target:7.5.0 target:7.4.2
Keywords:
Depends on:
Blocks: Windows-Dark-Mode
  Show dependency treegraph
 
Reported: 2022-09-19 08:56 UTC by dainius.mazuika
Modified: 2022-09-21 16:50 UTC (History)
4 users (show)

See Also:
Crash report or crash signature:


Attachments
1 (6.79 KB, image/png)
2022-09-19 08:58 UTC, dainius.mazuika
Details
2 (26.53 KB, image/png)
2022-09-19 08:58 UTC, dainius.mazuika
Details
3 (22.56 KB, image/png)
2022-09-19 08:58 UTC, dainius.mazuika
Details
4 (18.17 KB, image/png)
2022-09-19 08:58 UTC, dainius.mazuika
Details

Note You need to log in before you can comment on or make changes to this bug.
Description dainius.mazuika 2022-09-19 08:56:56 UTC
Description:
Button text is black, should be bright, like other UI elements in dark mode

Steps to Reproduce:
1. Enable experimental features under options, "Do not Use color themes", LibreOffice theme in "Application colors"
2. CTLR + F -> Look for "Find All" button;

Actual Results:
Button is invisible because of black text color of the button;

Expected Results:
Button text should be bright, like other buttons and checkboxes in UI


Reproducible: Always


User Profile Reset: No



Additional Info:
na
Comment 1 dainius.mazuika 2022-09-19 08:58:05 UTC
Created attachment 182541 [details]
1
Comment 2 dainius.mazuika 2022-09-19 08:58:20 UTC
Created attachment 182542 [details]
2
Comment 3 dainius.mazuika 2022-09-19 08:58:36 UTC
Created attachment 182543 [details]
3
Comment 4 dainius.mazuika 2022-09-19 08:58:57 UTC
Created attachment 182544 [details]
4
Comment 5 dainius.mazuika 2022-09-19 08:59:16 UTC
Version: 7.4.1.2 (x64) / LibreOffice Community
Build ID: 3c58a8f3a960df8bc8fd77b461821e42c061c5f0
CPU threads: 4; OS: Windows 10.0 Build 19044; UI render: default; VCL: win
Locale: en-US (en_US); UI: en-US
Calc: CL
Comment 6 V Stuart Foote 2022-09-19 10:01:16 UTC
Confirmed. The 'Find All' button label is modal and toggles active when a find selection is made.  It is a light gray when just an inactive label, but is black when there is a selection. Should get a fg text color appropriate to a dark bg.

Note: Experimental features is no longer required for auto-triggering Windws os/DE 'Dark' color support (reading os/DE theme and switching to Dark icon theme).  But the selection of Application Colors 'LibreOffice Dark' remains a manual selection.

=-testing-=

Version: 7.5.0.0.alpha0+ (x64) / LibreOffice Community
Build ID: a3bbdfab809609bec3475613a918eda699fbdc29
CPU threads: 8; OS: Windows 10.0 Build 19044; UI render: Skia/Vulkan; VCL: win
Locale: en-US (en_US); UI: en-US
Calc: threaded
Comment 7 V Stuart Foote 2022-09-19 10:05:45 UTC
And of course Find Bar is common to modules and the labeling issue appears across the UI.
Comment 8 V Stuart Foote 2022-09-19 15:25:49 UTC
@Caolán, would the Find toolbar respond to solution for bug 151017, or need similar but for toolbars instead of the SC backingwindow?
Comment 9 Caolán McNamara 2022-09-19 16:29:45 UTC
I think the color used for that is "ToolTextColor" and we should set it to the same as "WindowTextColor" for darkmode similar to what we do for other cases. https://gerrit.libreoffice.org/c/core/+/140195 is untested (for the moment) but is the kind of thing I think is relevant here.
Comment 10 Caolán McNamara 2022-09-19 18:33:01 UTC
yeah, tested now, that'll work
Comment 11 Commit Notification 2022-09-19 20:26:29 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/2f1ad908310918d964b2996ccf4e987b7b0af86f

tdf#151052 set Windows darkmode "ToolTextColor" to same as "WindowTextColor"

It will be available in 7.5.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 12 Commit Notification 2022-09-19 21:59:16 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "libreoffice-7-4":

https://git.libreoffice.org/core/commit/286000f2df456cffabd678e3bde56af14c7bd185

tdf#151052 set Windows darkmode "ToolTextColor" to same as "WindowTextColor"

It will be available in 7.4.2.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 13 V Stuart Foote 2022-09-21 16:50:26 UTC
Verified now visible in Win10 Dark color mode

Version: 7.5.0.0.alpha0+ (x86) / LibreOffice Community
Build ID: f0a36babf2ef1384666705697f91e7ff4166f4e4
CPU threads: 8; OS: Windows 10.0 Build 19044; UI render: Skia/Vulkan; VCL: win
Locale: en-US (en_US); UI: en-US
Calc: CL threaded