tdf#151052 set Windows darkmode "ToolTextColor" to same as "WindowTextColor"

they are the same in light mode, so do the same in darkmode

Change-Id: Ib0186383fcd7f8d74c7ada6826c6955a747e4ecd
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/140162
Tested-by: Jenkins
Reviewed-by: Adolfo Jayme Barrientos <fitojb@ubuntu.com>